# django-forum

./: .gitignore  Makefile  README.md  env.example  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt
apps/forum/: admin.py  admin_extras.py  apps.py  context_processors.py  dm_utils.py  feeds.py  forms.py  forms_account.py  ignore_utils.py  middleware.py  models.py  permissions.py  search.py  urls.py  utils.py  views.py
apps/robots/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/site_pages/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/sitemap/: apps.py  urls.py  views.py
apps/users/: admin.py  apps.py  models.py  signals.py
core/: admin.py  email_backends.py  urls.py
core/context_processors/: __init__.py  current_date_info.py
core/middlewares/: __init__.py  add_contenttype_options.py  admin_language.py  cache_control.py  force_samesite_none.py  healthcheck.py  last_modified.py  permissions_policy.py  referrer_policy.py  request_id.py  request_log_middleware.py  timing.py  user_agent_validation.py  user_type.py
core/models/: querysets.py
core/settings/: base.py  development.py  production.py
core/templatetags/: rosetta_app_names.py  site_i18n.py
core/utils/: sql.py  text.py
fixtures/: forum_demo.json
scripts/: strip_blank_after_docstring.py
templates/: base.html
templates/account/: base.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html  signup.html  verification_sent.html
templates/admin/: change_form_slim.html  (+1 more)
(+95 files in other folders)
